--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html{
 }
 
 header{
-    background-image: url('/images/bg-header-desktop.png');
+    background-image: url('images/bg-header-desktop.png');
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -379,7 +379,7 @@ footer {
 
 @media screen and (max-width:780px) {
     header {
-        background-image: url('/images/bg-header-mobile.png');
+        background-image: url('images/bg-header-mobile.png');
     }
 
     .header-text h1 {
